--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "tailwindcss": "^3.0.0",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.4"
   }
